<resources>

    <string name="app_name">Enjoy Food</string>
    <string name="action_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_accueil">Home</string>
    <string name="menu_produit">Products</string>
    <string name="menu_consommations">Consumption</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_title">Registration</string>
    <string name="pseudo">Pseudo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="version">Version v.1.0 \n \n \n Authors : \n \n BAICH Mohammed Amine \n\n OUDJEDI DAMERDJI Faiza</string>
    <string name="droits">Copyright 2020, EnjoyFood\nAll rights reserved</string>
    <string name="populaire">Category</string>
    <string name="bienvenue">Welcome !</string>
    <string name="composition_nutrisionnelle">Nutritional composition</string>
    <string name="pour_n100_ml">For\n100 ml</string>
    <string name="par_portion_250_ml">Per portion (250 ml)</string>
    <string name="energie">Energy</string>
    <string name="mati_res_grasses">Fat</string>
    <string name="graisses_satur_es">Saturated fat</string>
    <string name="glucides">Carbohydrate</string>
    <string name="prot_ines">Protein</string>
    <string name="fibres">fiber</string>
    <string name="sodium">Sodium</string>
    <string name="sel">Salt</string>
    <string name="calcium">Calcium</string>
    <string name="fruits_l_gumes">Fruits and vegetables (%)</string>
    <string name="ingrediant">Ingredient</string>
    <string name="sucres">Sugar</string>
    <string name="nutrition">Nutrition</string>
    <string name="unity_g">g</string>
    <string name="unity_kj">KJ</string>
    <string name="unity_kcal">KCal</string>
    <string name="unity_kg">kg</string>
    <string name="unity_ml">ml</string>
    <string name="unity_litre">L</string>
    <string name="for100ml">for\n100 ml</string>
    <string name="for250ml">Per portion (250 ml)</string>
    <string name="for100g">for\n100 g</string>
    <string name="for250g">Per portion (250 g)</string>
    <string name="par">By</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_login">Login</string>
    <string name="menu_historique">Historical</string>
    <string name="go">let\'s go!</string>
    <string name="scan">Scan</string>
    <string name="skip">Skip</string>
    <string name="verification">Please fill in all fields</string>
    <string name="menu">Menu</string>
    <string name="empty">No product found</string>
    <string name="calorie">Calorie</string>
    <string name="glucide">carbohydrate</string>
    <string name="sucre">Sugar</string>
    <string name="fibre">Fiber</string>
    <string name="mati_res_grasse">Fat</string>
    <string name="graisse">saturated fat</string>
    <string name="proteine">Protein</string>
    <string name="error">An error has occurred</string>
    <string name="error_cnx">Impossible to connect</string>
    <string name="historique_empty">Empty history</string>

    <string-array name="bilan">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>

    <string-array name="intro">
        <item>Welcome! Ready to change some of your habits and be more careful when buying and consuming ?</item>
        <item>Enjoy Food is an application designed to help you better choose the right products and manage your consumption</item>
        <item>Easily retrieve all the nutritional information of a food product and make a real decision about what you want on your plate</item>
        <item>Note and calculate your daily, weekly or monthly consumption</item>
    </string-array>
    <string name="about">About</string>
    <string name="password2">Retype your password</string>
    <string name="login_title">Connection</string>
    <string name="next">Next</string>
    <string name="consomme">Consumed</string>
    <string name="scanned">Scanned product(s)</string>
    <string name="clear_history">Clear history</string>
    <string name="all">All</string>
    <string name="autres">Others</string>


    // les categories
    <array name="categories">
        <item>Drinks</item>
        <item>Milk products</item>
        <item>Fat</item>
        <item>Sweet products</item>
        <item>Cereals/Starches</item>
        <item>Fruits/Vegetables</item>
        <item>Water</item>
        <item>Others</item>
    </array>

    <string name="succes_cnx">Successfully connected</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>

    <string-array name="echel">
        <item>Packet/Bottle</item>
        <item>Portion</item>
        <item>Spoon 3 g</item>
        <item>Spoon 25 g</item>
        <item>Glass 250 ml</item>
        <item>Bowl 250 g</item>
    </string-array>

    <string-array name="dialog">
        <item>Confirm</item>
        <item>OK</item>
        <item>Cancel</item>
    </string-array>

    <string name="tableau">Calorie table</string>
    <string name="ingrediants">Ingredients</string>
    <string name="statistique">Statistics</string>

</resources>
