<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accueil"
            android:icon="@drawable/ic_accueil"
            android:title="@string/menu_accueil" />
        <item
            android:id="@+id/nav_produit"
            android:icon="@drawable/ic_produit"
            android:title="@string/menu_produit" />
        <item
            android:id="@+id/nav_consommation"
            android:icon="@drawable/ic_consommation"
            android:title="@string/menu_consommations" />
        <item
            android:id="@+id/nav_historique"
            android:icon="@drawable/ic_history"
            android:title="Historique" />
        <item
            android:id="@+id/nav_apropos"
            android:icon="@drawable/ic_apropos"
            android:title="@string/about" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="Profile">
            <menu>

                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_log"
                    android:title="@string/menu_login" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />

            </menu>

        </item>
    </group>
</menu>
