<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_accueil">

    <fragment
        android:id="@+id/nav_accueil"
        android:name="com.exemple.enjoyfood.ui.fragmentAccueil"
        android:label="@string/menu_accueil"
        tools:layout="@layout/activity_accueil">

    </fragment>


    <fragment
        android:id="@+id/nav_produit"
        android:name="com.exemple.enjoyfood.ui.fragmentProduit"
        android:label="@string/menu_produit"
        tools:layout="@layout/activity_produit" />

    <fragment
        android:id="@+id/nav_consommation"
        android:name="com.exemple.enjoyfood.ui.fragmentConsommation"
        android:label="@string/menu_consommations"
        tools:layout="@layout/activity_consommation" />

    <fragment
        android:id="@+id/nav_historique"
        android:name="com.exemple.enjoyfood.ui.fragmentHistorique"
        android:label="@string/menu_historique"
        tools:layout="@layout/activity_historique" />

    <fragment
        android:id="@+id/nav_apropos"
        android:name="com.exemple.enjoyfood.ui.fragmentApropos"
        android:label="@string/menu_apropos"
        tools:layout="@layout/activity_apropos" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.exemple.enjoyfood.ui.fragmentProfile"
        android:label="@string/menu_profile"
        tools:layout="@layout/activity_profile" />

</navigation>