<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wi"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        android:background="#3fff">

        <TextView
            android:id="@+id/register_title"
            android:background="@drawable/circle"
            android:gravity="center"
            android:textColor="#333333"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="20sp"
            android:text="@string/register_title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/til_pseudo"
            android:layout_width="250dp"
            android:textColorHint="#333333"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pseudo"
                android:paddingStart="10dp"
                android:background="@drawable/btn_register"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:drawableStart="@drawable/ic_login"
                android:hint="@string/pseudo"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:autofillHints=""
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_mail"
            android:layout_width="250dp"
            android:textColorHint="#333333"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/mail"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:background="@drawable/btn_register"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:drawableStart="@drawable/ic_mail"
                android:autofillHints=""
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pass"
            android:layout_width="250dp"
            android:textColorHint="#333333"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pass"
                android:paddingStart="10dp"
                android:background="@drawable/btn_register"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                tools:ignore="RtlSymmetry"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pass2"
            android:layout_width="250dp"
            android:textColorHint="#333333"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/pass2"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:hint="@string/password2"
                android:paddingStart="10dp"
                android:background="@drawable/btn_register"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:drawableStart="@drawable/ic_lock"
                tools:ignore="RtlSymmetry"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#3fff"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/sinscrir"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:background="@drawable/btn_login_color"
            android:text="@string/register"/>

        <ProgressBar
            android:id="@+id/pb_loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_sinscrir"
            android:layout_marginTop="20dp"
            android:visibility="invisible"/>

    </LinearLayout>


</LinearLayout>