<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background1"
    android:layout_height="match_parent"
    tools:context=".ui.ResultatActivity">


        <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        android:visibility="invisible"
                        android:id="@+id/iv"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/icone_enjoyfood3" />
                    <ProgressBar
                        android:id="@+id/pg_image_produit_resultat"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/icone_enjoyfood3" />

                    <TextView
                        android:id="@+id/titre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@id/iv"
                        android:layout_toRightOf="@id/iv"
                        android:text="Titre"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titre"
                        android:layout_alignStart="@id/titre"
                        android:layout_toEndOf="@id/iv"
                        android:layout_toRightOf="@id/iv"
                        android:text="Description"
                        android:textSize="16sp" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/_btn_add"
                        android:visibility="invisible"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_plus" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_nutriscore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/baloo"
                        android:text="NUTRISCORE"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_below="@id/tv_nutriscore"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/A"
                            android:layout_width="@dimen/nutri_width_normal_size"
                            android:layout_height="@dimen/nutri_height_normal_size"
                            android:gravity="center"
                            android:background="@drawable/bg_rounded_a_before"
                            android:text="@string/a"
                            android:textColor="@color/a"
                            android:textSize="@dimen/nutri_text_size"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/B"
                            android:layout_width="@dimen/nutri_width_normal_size"
                            android:layout_height="@dimen/nutri_height_normal_size"
                            android:gravity="center"
                            android:text="@string/b"
                            android:textStyle="bold"
                            android:textSize="@dimen/nutri_text_size"
                            android:textColor="@color/b"
                            android:textAlignment="center"
                            android:background="@color/b_background"/>
                        <TextView
                            android:id="@+id/C"
                            android:layout_width="@dimen/nutri_width_normal_size"
                            android:layout_height="@dimen/nutri_height_normal_size"
                            android:gravity="center"
                            android:text="@string/c"
                            android:textStyle="bold"
                            android:textSize="@dimen/nutri_text_size"
                            android:textColor="@color/c"
                            android:textAlignment="center"
                            android:background="@color/c_background"/>
                        <TextView
                            android:id="@+id/D"
                            android:layout_width="@dimen/nutri_width_normal_size"
                            android:layout_height="@dimen/nutri_height_normal_size"
                            android:gravity="center"
                            android:text="@string/d"
                            android:textStyle="bold"
                            android:textSize="@dimen/nutri_text_size"
                            android:textAlignment="center"
                            android:textColor="@color/d"
                            android:background="@color/d_background"/>
                        <TextView
                            android:id="@+id/E"
                            android:layout_width="@dimen/nutri_width_normal_size"
                            android:layout_height="@dimen/nutri_height_normal_size"
                            android:gravity="center"
                            android:text="@string/e"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textSize="@dimen/nutri_text_size"
                            android:textColor="@color/e"
                            android:background="@drawable/bg_rounded_e_before"/>


                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tabLayout"/>
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>